antlr4-runtime/grammer/MyLanguageParser.cpp

// Generated from antlr4-runtime/grammer/MyLanguage.g4 by ANTLR 4.7


#include "MyLanguageListener.h"

#include "MyLanguageParser.h"


using namespace antlrcpp;
using namespace antlr4;

MyLanguageParser::MyLanguageParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

MyLanguageParser::~MyLanguageParser() {
  delete _interpreter;
}

std::string MyLanguageParser::getGrammarFileName() const {
  return "MyLanguage.g4";
}

const std::vector<std::string>& MyLanguageParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& MyLanguageParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

MyLanguageParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MyLanguageParser::ProgramContext::EOF() {
  return getToken(MyLanguageParser::EOF, 0);
}

std::vector<MyLanguageParser::StatementContext *> MyLanguageParser::ProgramContext::statement() {
  return getRuleContexts<MyLanguageParser::StatementContext>();
}

MyLanguageParser::StatementContext* MyLanguageParser::ProgramContext::statement(size_t i) {
  return getRuleContext<MyLanguageParser::StatementContext>(i);
}


size_t MyLanguageParser::ProgramContext::getRuleIndex() const {
  return MyLanguageParser::RuleProgram;
}

void MyLanguageParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void MyLanguageParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

MyLanguageParser::ProgramContext* MyLanguageParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, MyLanguageParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(29);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MyLanguageParser::T__0)
      | (1ULL << MyLanguageParser::T__3)
      | (1ULL << MyLanguageParser::T__7)
      | (1ULL << MyLanguageParser::T__9)
      | (1ULL << MyLanguageParser::T__10)
      | (1ULL << MyLanguageParser::IDENTIFIER))) != 0)) {
      setState(26);
      statement();
      setState(31);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(32);
    match(MyLanguageParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

MyLanguageParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MyLanguageParser::VariableDeclarationContext* MyLanguageParser::StatementContext::variableDeclaration() {
  return getRuleContext<MyLanguageParser::VariableDeclarationContext>(0);
}

MyLanguageParser::AssignmentContext* MyLanguageParser::StatementContext::assignment() {
  return getRuleContext<MyLanguageParser::AssignmentContext>(0);
}

MyLanguageParser::IfStatementContext* MyLanguageParser::StatementContext::ifStatement() {
  return getRuleContext<MyLanguageParser::IfStatementContext>(0);
}

MyLanguageParser::FunctionDeclarationContext* MyLanguageParser::StatementContext::functionDeclaration() {
  return getRuleContext<MyLanguageParser::FunctionDeclarationContext>(0);
}

MyLanguageParser::FunctionCallContext* MyLanguageParser::StatementContext::functionCall() {
  return getRuleContext<MyLanguageParser::FunctionCallContext>(0);
}

MyLanguageParser::ForStatementContext* MyLanguageParser::StatementContext::forStatement() {
  return getRuleContext<MyLanguageParser::ForStatementContext>(0);
}

MyLanguageParser::PrintStatementContext* MyLanguageParser::StatementContext::printStatement() {
  return getRuleContext<MyLanguageParser::PrintStatementContext>(0);
}


size_t MyLanguageParser::StatementContext::getRuleIndex() const {
  return MyLanguageParser::RuleStatement;
}

void MyLanguageParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void MyLanguageParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}

MyLanguageParser::StatementContext* MyLanguageParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, MyLanguageParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(41);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(34);
      variableDeclaration();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(35);
      assignment();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(36);
      ifStatement();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(37);
      functionDeclaration();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(38);
      functionCall();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(39);
      forStatement();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(40);
      printStatement();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableDeclarationContext ------------------------------------------------------------------

MyLanguageParser::VariableDeclarationContext::VariableDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MyLanguageParser::VariableDeclarationContext::IDENTIFIER() {
  return getToken(MyLanguageParser::IDENTIFIER, 0);
}

MyLanguageParser::ExpressionContext* MyLanguageParser::VariableDeclarationContext::expression() {
  return getRuleContext<MyLanguageParser::ExpressionContext>(0);
}


size_t MyLanguageParser::VariableDeclarationContext::getRuleIndex() const {
  return MyLanguageParser::RuleVariableDeclaration;
}

void MyLanguageParser::VariableDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVariableDeclaration(this);
}

void MyLanguageParser::VariableDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVariableDeclaration(this);
}

MyLanguageParser::VariableDeclarationContext* MyLanguageParser::variableDeclaration() {
  VariableDeclarationContext *_localctx = _tracker.createInstance<VariableDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 4, MyLanguageParser::RuleVariableDeclaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(43);
    match(MyLanguageParser::T__0);
    setState(44);
    match(MyLanguageParser::IDENTIFIER);
    setState(45);
    match(MyLanguageParser::T__1);
    setState(46);
    expression(0);
    setState(47);
    match(MyLanguageParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentContext ------------------------------------------------------------------

MyLanguageParser::AssignmentContext::AssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MyLanguageParser::AssignmentContext::IDENTIFIER() {
  return getToken(MyLanguageParser::IDENTIFIER, 0);
}

MyLanguageParser::ExpressionContext* MyLanguageParser::AssignmentContext::expression() {
  return getRuleContext<MyLanguageParser::ExpressionContext>(0);
}


size_t MyLanguageParser::AssignmentContext::getRuleIndex() const {
  return MyLanguageParser::RuleAssignment;
}

void MyLanguageParser::AssignmentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignment(this);
}

void MyLanguageParser::AssignmentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignment(this);
}

MyLanguageParser::AssignmentContext* MyLanguageParser::assignment() {
  AssignmentContext *_localctx = _tracker.createInstance<AssignmentContext>(_ctx, getState());
  enterRule(_localctx, 6, MyLanguageParser::RuleAssignment);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(49);
    match(MyLanguageParser::IDENTIFIER);
    setState(50);
    match(MyLanguageParser::T__1);
    setState(51);
    expression(0);
    setState(52);
    match(MyLanguageParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfStatementContext ------------------------------------------------------------------

MyLanguageParser::IfStatementContext::IfStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MyLanguageParser::ExpressionContext* MyLanguageParser::IfStatementContext::expression() {
  return getRuleContext<MyLanguageParser::ExpressionContext>(0);
}

std::vector<MyLanguageParser::BlockContext *> MyLanguageParser::IfStatementContext::block() {
  return getRuleContexts<MyLanguageParser::BlockContext>();
}

MyLanguageParser::BlockContext* MyLanguageParser::IfStatementContext::block(size_t i) {
  return getRuleContext<MyLanguageParser::BlockContext>(i);
}


size_t MyLanguageParser::IfStatementContext::getRuleIndex() const {
  return MyLanguageParser::RuleIfStatement;
}

void MyLanguageParser::IfStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIfStatement(this);
}

void MyLanguageParser::IfStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIfStatement(this);
}

MyLanguageParser::IfStatementContext* MyLanguageParser::ifStatement() {
  IfStatementContext *_localctx = _tracker.createInstance<IfStatementContext>(_ctx, getState());
  enterRule(_localctx, 8, MyLanguageParser::RuleIfStatement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(54);
    match(MyLanguageParser::T__3);
    setState(55);
    match(MyLanguageParser::T__4);
    setState(56);
    expression(0);
    setState(57);
    match(MyLanguageParser::T__5);
    setState(58);
    block();
    setState(61);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MyLanguageParser::T__6) {
      setState(59);
      match(MyLanguageParser::T__6);
      setState(60);
      block();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionDeclarationContext ------------------------------------------------------------------

MyLanguageParser::FunctionDeclarationContext::FunctionDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MyLanguageParser::FunctionDeclarationContext::IDENTIFIER() {
  return getToken(MyLanguageParser::IDENTIFIER, 0);
}

MyLanguageParser::BlockContext* MyLanguageParser::FunctionDeclarationContext::block() {
  return getRuleContext<MyLanguageParser::BlockContext>(0);
}

MyLanguageParser::ParameterListContext* MyLanguageParser::FunctionDeclarationContext::parameterList() {
  return getRuleContext<MyLanguageParser::ParameterListContext>(0);
}


size_t MyLanguageParser::FunctionDeclarationContext::getRuleIndex() const {
  return MyLanguageParser::RuleFunctionDeclaration;
}

void MyLanguageParser::FunctionDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionDeclaration(this);
}

void MyLanguageParser::FunctionDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionDeclaration(this);
}

MyLanguageParser::FunctionDeclarationContext* MyLanguageParser::functionDeclaration() {
  FunctionDeclarationContext *_localctx = _tracker.createInstance<FunctionDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 10, MyLanguageParser::RuleFunctionDeclaration);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(63);
    match(MyLanguageParser::T__7);
    setState(64);
    match(MyLanguageParser::IDENTIFIER);
    setState(65);
    match(MyLanguageParser::T__4);
    setState(67);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MyLanguageParser::IDENTIFIER) {
      setState(66);
      parameterList();
    }
    setState(69);
    match(MyLanguageParser::T__5);
    setState(70);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterListContext ------------------------------------------------------------------

MyLanguageParser::ParameterListContext::ParameterListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> MyLanguageParser::ParameterListContext::IDENTIFIER() {
  return getTokens(MyLanguageParser::IDENTIFIER);
}

tree::TerminalNode* MyLanguageParser::ParameterListContext::IDENTIFIER(size_t i) {
  return getToken(MyLanguageParser::IDENTIFIER, i);
}


size_t MyLanguageParser::ParameterListContext::getRuleIndex() const {
  return MyLanguageParser::RuleParameterList;
}

void MyLanguageParser::ParameterListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameterList(this);
}

void MyLanguageParser::ParameterListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameterList(this);
}

MyLanguageParser::ParameterListContext* MyLanguageParser::parameterList() {
  ParameterListContext *_localctx = _tracker.createInstance<ParameterListContext>(_ctx, getState());
  enterRule(_localctx, 12, MyLanguageParser::RuleParameterList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    match(MyLanguageParser::IDENTIFIER);
    setState(77);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MyLanguageParser::T__8) {
      setState(73);
      match(MyLanguageParser::T__8);
      setState(74);
      match(MyLanguageParser::IDENTIFIER);
      setState(79);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionCallContext ------------------------------------------------------------------

MyLanguageParser::FunctionCallContext::FunctionCallContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MyLanguageParser::FunctionCallContext::IDENTIFIER() {
  return getToken(MyLanguageParser::IDENTIFIER, 0);
}

MyLanguageParser::ArgumentListContext* MyLanguageParser::FunctionCallContext::argumentList() {
  return getRuleContext<MyLanguageParser::ArgumentListContext>(0);
}


size_t MyLanguageParser::FunctionCallContext::getRuleIndex() const {
  return MyLanguageParser::RuleFunctionCall;
}

void MyLanguageParser::FunctionCallContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionCall(this);
}

void MyLanguageParser::FunctionCallContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionCall(this);
}

MyLanguageParser::FunctionCallContext* MyLanguageParser::functionCall() {
  FunctionCallContext *_localctx = _tracker.createInstance<FunctionCallContext>(_ctx, getState());
  enterRule(_localctx, 14, MyLanguageParser::RuleFunctionCall);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(80);
    match(MyLanguageParser::IDENTIFIER);
    setState(81);
    match(MyLanguageParser::T__4);
    setState(83);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MyLanguageParser::T__4)
      | (1ULL << MyLanguageParser::IDENTIFIER)
      | (1ULL << MyLanguageParser::NUMBER))) != 0)) {
      setState(82);
      argumentList();
    }
    setState(85);
    match(MyLanguageParser::T__5);
    setState(86);
    match(MyLanguageParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArgumentListContext ------------------------------------------------------------------

MyLanguageParser::ArgumentListContext::ArgumentListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MyLanguageParser::ExpressionContext *> MyLanguageParser::ArgumentListContext::expression() {
  return getRuleContexts<MyLanguageParser::ExpressionContext>();
}

MyLanguageParser::ExpressionContext* MyLanguageParser::ArgumentListContext::expression(size_t i) {
  return getRuleContext<MyLanguageParser::ExpressionContext>(i);
}


size_t MyLanguageParser::ArgumentListContext::getRuleIndex() const {
  return MyLanguageParser::RuleArgumentList;
}

void MyLanguageParser::ArgumentListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArgumentList(this);
}

void MyLanguageParser::ArgumentListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArgumentList(this);
}

MyLanguageParser::ArgumentListContext* MyLanguageParser::argumentList() {
  ArgumentListContext *_localctx = _tracker.createInstance<ArgumentListContext>(_ctx, getState());
  enterRule(_localctx, 16, MyLanguageParser::RuleArgumentList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    expression(0);
    setState(93);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MyLanguageParser::T__8) {
      setState(89);
      match(MyLanguageParser::T__8);
      setState(90);
      expression(0);
      setState(95);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ForStatementContext ------------------------------------------------------------------

MyLanguageParser::ForStatementContext::ForStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MyLanguageParser::VariableDeclarationContext* MyLanguageParser::ForStatementContext::variableDeclaration() {
  return getRuleContext<MyLanguageParser::VariableDeclarationContext>(0);
}

MyLanguageParser::ExpressionContext* MyLanguageParser::ForStatementContext::expression() {
  return getRuleContext<MyLanguageParser::ExpressionContext>(0);
}

MyLanguageParser::AssignmentContext* MyLanguageParser::ForStatementContext::assignment() {
  return getRuleContext<MyLanguageParser::AssignmentContext>(0);
}

MyLanguageParser::BlockContext* MyLanguageParser::ForStatementContext::block() {
  return getRuleContext<MyLanguageParser::BlockContext>(0);
}


size_t MyLanguageParser::ForStatementContext::getRuleIndex() const {
  return MyLanguageParser::RuleForStatement;
}

void MyLanguageParser::ForStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterForStatement(this);
}

void MyLanguageParser::ForStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitForStatement(this);
}

MyLanguageParser::ForStatementContext* MyLanguageParser::forStatement() {
  ForStatementContext *_localctx = _tracker.createInstance<ForStatementContext>(_ctx, getState());
  enterRule(_localctx, 18, MyLanguageParser::RuleForStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(96);
    match(MyLanguageParser::T__9);
    setState(97);
    match(MyLanguageParser::T__4);
    setState(98);
    variableDeclaration();
    setState(99);
    expression(0);
    setState(100);
    match(MyLanguageParser::T__2);
    setState(101);
    assignment();
    setState(102);
    match(MyLanguageParser::T__5);
    setState(103);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrintStatementContext ------------------------------------------------------------------

MyLanguageParser::PrintStatementContext::PrintStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MyLanguageParser::ExpressionContext* MyLanguageParser::PrintStatementContext::expression() {
  return getRuleContext<MyLanguageParser::ExpressionContext>(0);
}


size_t MyLanguageParser::PrintStatementContext::getRuleIndex() const {
  return MyLanguageParser::RulePrintStatement;
}

void MyLanguageParser::PrintStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPrintStatement(this);
}

void MyLanguageParser::PrintStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPrintStatement(this);
}

MyLanguageParser::PrintStatementContext* MyLanguageParser::printStatement() {
  PrintStatementContext *_localctx = _tracker.createInstance<PrintStatementContext>(_ctx, getState());
  enterRule(_localctx, 20, MyLanguageParser::RulePrintStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(105);
    match(MyLanguageParser::T__10);
    setState(106);
    match(MyLanguageParser::T__4);
    setState(107);
    expression(0);
    setState(108);
    match(MyLanguageParser::T__5);
    setState(109);
    match(MyLanguageParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

MyLanguageParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MyLanguageParser::StatementContext *> MyLanguageParser::BlockContext::statement() {
  return getRuleContexts<MyLanguageParser::StatementContext>();
}

MyLanguageParser::StatementContext* MyLanguageParser::BlockContext::statement(size_t i) {
  return getRuleContext<MyLanguageParser::StatementContext>(i);
}


size_t MyLanguageParser::BlockContext::getRuleIndex() const {
  return MyLanguageParser::RuleBlock;
}

void MyLanguageParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void MyLanguageParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}
